fix(layout): handle nav drawer scrim correctly (#14657)
* fix(layout): handle nav drawer scrim correctly

* feat(layout): support dynamic items without priority prop

* feat(layout): revert removal of absolute prop

* fix: menu/overlay z-index

* fix(layout): support keep-alive

--- a/packages/vuetify/src/components/VLayout/VLayoutItem.sass
+++ b/packages/vuetify/src/components/VLayout/VLayoutItem.sass
@@ -1,7 +1,7 @@
 @use '../../styles/settings'
 
 .v-layout-item
-  position: fixed
+  position: absolute
   transition: 0.2s settings.$standard-easing
 
 .v-layout-item--absolute
