feat(colors): add proper text color for color-pack bgs

--- a/packages/vuetify/src/styles/generic/_colors.scss
+++ b/packages/vuetify/src/styles/generic/_colors.scss
@@ -1,5 +1,7 @@
+@use 'sass:map';
 @use '../settings';
 @use '../settings/colors';
+@use '../tools/functions' as *;
 
 @mixin background-color($color_value) {
   background-color: $color_value !important;
@@ -8,6 +10,11 @@
 @mixin text-color($color_value) {
   color: $color_value !important;
   caret-color: $color_value !important;
+}
+@mixin background-text-color($color_name, $color_type) {
+  $map_value: map-deep-get(colors.$text-on-colors, $color_name, $color_type);
+
+  color: rgba($map_value, var(--v-high-emphasis-opacity)) !important;
 }
 
 @if (settings.$color-pack) {
@@ -26,6 +33,10 @@
       @if ($color_type == 'base') {
         .bg-#{$color_name} {
           @include background-color($color_value);
+
+          @if (map.has-key(colors.$text-on-colors, $color_name)) {
+            @include background-text-color($color_name, $color_type);
+          }
         }
 
         .text-#{$color_name} {
@@ -35,6 +46,10 @@
       @else if ($color_type != 'shades') {
         .bg-#{$color_name}-#{$color_type} {
           @include background-color($color_value);
+
+          @if (map.has-key(colors.$text-on-colors, $color_name)) {
+            @include background-text-color($color_name, $color_type);
+          }
         }
 
         .text-#{$color_name}-#{$color_type} {
