--- a/packages/vuetify/src/styles/settings/_colors.scss
+++ b/packages/vuetify/src/styles/settings/_colors.scss
@@ -1,5 +1,15 @@
 @use '../tools/functions' as *;
 
+$shades: () !default;
+$shades: map-deep-merge(
+  (
+    'black': #000000,
+    'white': #FFFFFF,
+    'transparent': transparent
+  ),
+  $shades
+);
+
 $red: () !default;
 $red: map-deep-merge(
   (
@@ -19,6 +29,27 @@ $red: map-deep-merge(
     'accent-4': #D50000
   ),
   $red
+);
+
+$text-on-red: () !default;
+$text-on-red: map-deep-merge(
+  (
+    'base': map-get($shades, 'black'),
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'white')
+  ),
+  $text-on-red
 );
 
 $pink: () !default;
@@ -42,6 +73,27 @@ $pink: map-deep-merge(
   $pink
 );
 
+$text-on-pink: () !default;
+$text-on-pink: map-deep-merge(
+  (
+    'base': map-get($shades, 'black'),
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'white'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'white')
+  ),
+  $text-on-pink
+);
+
 $purple: () !default;
 $purple: map-deep-merge(
   (
@@ -61,6 +113,27 @@ $purple: map-deep-merge(
     'accent-4': #aa00ff
   ),
   $purple
+);
+
+$text-on-purple: () !default;
+$text-on-purple: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'white'),
+    'base': map-get($shades, 'white'),
+    'darken-1': map-get($shades, 'white'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'white')
+  ),
+  $text-on-purple
 );
 
 $deep-purple: () !default;
@@ -84,6 +157,27 @@ $deep-purple: map-deep-merge(
   $deep-purple
 );
 
+$text-on-deep-purple: () !default;
+$text-on-deep-purple: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'white'),
+    'base': map-get($shades, 'white'),
+    'darken-1': map-get($shades, 'white'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'white'),
+    'accent-3': map-get($shades, 'white'),
+    'accent-4': map-get($shades, 'white')
+  ),
+  $text-on-deep-purple
+);
+
 $indigo: () !default;
 $indigo: map-deep-merge(
   (
@@ -103,6 +197,27 @@ $indigo: map-deep-merge(
     'accent-4': #304ffe
   ),
   $indigo
+);
+
+$text-on-indigo: () !default;
+$text-on-indigo: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'white'),
+    'base': map-get($shades, 'white'),
+    'darken-1': map-get($shades, 'white'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'white'),
+    'accent-4': map-get($shades, 'white')
+  ),
+  $text-on-indigo
 );
 
 $blue: () !default;
@@ -126,6 +241,27 @@ $blue: map-deep-merge(
   $blue
 );
 
+$text-on-blue: () !default;
+$text-on-blue: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'white')
+  ),
+  $text-on-blue
+);
+
 $light-blue: () !default;
 $light-blue: map-deep-merge(
   (
@@ -145,6 +281,27 @@ $light-blue: map-deep-merge(
     'accent-4': #0091ea
   ),
   $light-blue
+);
+
+$text-on-light-blue: () !default;
+$text-on-light-blue: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-light-blue
 );
 
 $cyan: () !default;
@@ -168,6 +325,27 @@ $cyan: map-deep-merge(
   $cyan
 );
 
+$text-on-cyan: () !default;
+$text-on-cyan: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'black'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-cyan
+);
+
 $teal: () !default;
 $teal: map-deep-merge(
   (
@@ -187,6 +365,27 @@ $teal: map-deep-merge(
     'accent-4': #00bfa5
   ),
   $teal
+);
+
+$text-on-teal: () !default;
+$text-on-teal: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-teal
 );
 
 $green: () !default;
@@ -210,6 +409,27 @@ $green: map-deep-merge(
   $green
 );
 
+$text-on-green: () !default;
+$text-on-green: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'black'),
+    'darken-4': map-get($shades, 'black'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'white'),
+    'accent-3': map-get($shades, 'white'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-green
+);
+
 $light-green: () !default;
 $light-green: map-deep-merge(
   (
@@ -229,6 +449,27 @@ $light-green: map-deep-merge(
     'accent-4': #64dd17
   ),
   $light-green
+);
+
+$text-on-light-green: () !default;
+$text-on-light-green: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'black'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-light-green
 );
 
 $lime: () !default;
@@ -252,6 +493,27 @@ $lime: map-deep-merge(
   $lime
 );
 
+$text-on-lime: () !default;
+$text-on-lime: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'black'),
+    'darken-4': map-get($shades, 'black'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-lime
+);
+
 $yellow: () !default;
 $yellow: map-deep-merge(
   (
@@ -271,6 +533,27 @@ $yellow: map-deep-merge(
     'accent-4': #ffd600
   ),
   $yellow
+);
+
+$text-on-yellow: () !default;
+$text-on-yellow: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'black'),
+    'darken-4': map-get($shades, 'black'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-yellow
 );
 
 $amber: () !default;
@@ -294,6 +577,27 @@ $amber: map-deep-merge(
   $amber
 );
 
+$text-on-amber: () !default;
+$text-on-amber: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'black'),
+    'darken-4': map-get($shades, 'black'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-amber
+);
+
 $orange: () !default;
 $orange: map-deep-merge(
   (
@@ -315,6 +619,27 @@ $orange: map-deep-merge(
   $orange
 );
 
+$text-on-orange: () !default;
+$text-on-orange: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'black'),
+    'darken-4': map-get($shades, 'black'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'black')
+  ),
+  $text-on-orange
+);
+
 $deep-orange: () !default;
 $deep-orange: (
   'base': #ff5722,
@@ -331,6 +656,27 @@ $deep-orange: (
   'accent-2': #ff6e40,
   'accent-3': #ff3d00,
   'accent-4': #dd2c00
+);
+
+$text-on-deep-orange: () !default;
+$text-on-deep-orange: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'black'),
+    'darken-2': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'black'),
+    'darken-4': map-get($shades, 'white'),
+    'accent-1': map-get($shades, 'black'),
+    'accent-2': map-get($shades, 'black'),
+    'accent-3': map-get($shades, 'black'),
+    'accent-4': map-get($shades, 'white')
+  ),
+  $text-on-deep-orange
 );
 
 $brown: () !default;
@@ -350,6 +696,23 @@ $brown: map-deep-merge(
   $brown
 );
 
+$text-on-brown: () !default;
+$text-on-brown: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'white'),
+    'base': map-get($shades, 'white'),
+    'darken-1': map-get($shades, 'white'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white')
+  ),
+  $text-on-brown
+);
+
 $blue-grey: () !default;
 $blue-grey: map-deep-merge(
   (
@@ -365,6 +728,23 @@ $blue-grey: map-deep-merge(
     'darken-4': #263238
   ),
   $blue-grey
+);
+
+$text-on-blue-grey: () !default;
+$text-on-blue-grey: map-deep-merge(
+  (
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'white'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white')
+  ),
+  $text-on-blue-grey
 );
 
 $grey: () !default;
@@ -384,14 +764,21 @@ $grey: map-deep-merge(
   $grey
 );
 
-$shades: () !default;
-$shades: map-deep-merge(
+$text-on-grey: () !default;
+$text-on-grey: map-deep-merge(
   (
-    'black': #000000,
-    'white': #FFFFFF,
-    'transparent': transparent
+    'lighten-5': map-get($shades, 'black'),
+    'lighten-4': map-get($shades, 'black'),
+    'lighten-3': map-get($shades, 'black'),
+    'lighten-2': map-get($shades, 'black'),
+    'lighten-1': map-get($shades, 'black'),
+    'base': map-get($shades, 'black'),
+    'darken-1': map-get($shades, 'white'),
+    'darken-2': map-get($shades, 'white'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white')
   ),
-  $shades
+  $text-on-grey
 );
 
 $colors: () !default;
@@ -419,4 +806,30 @@ $colors: map-deep-merge(
     'shades': $shades
   ),
   $colors
+);
+
+$text-on-colors: () !default;
+$text-on-colors: map-deep-merge(
+  (
+    'red': $text-on-red,
+    'pink': $text-on-pink,
+    'purple': $text-on-purple,
+    'deep-purple': $text-on-deep-purple,
+    'indigo': $text-on-indigo,
+    'blue': $text-on-blue,
+    'light-blue': $text-on-light-blue,
+    'cyan': $text-on-cyan,
+    'teal': $text-on-teal,
+    'green': $text-on-green,
+    'light-green': $text-on-light-green,
+    'lime': $text-on-lime,
+    'yellow': $text-on-yellow,
+    'amber': $text-on-amber,
+    'orange': $text-on-orange,
+    'deep-orange': $text-on-deep-orange,
+    'brown': $text-on-brown,
+    'blue-grey': $text-on-blue-grey,
+    'grey': $text-on-grey
+  ),
+  $text-on-colors
 );
