--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -8,6 +8,7 @@
   grid-template-columns: min-content auto min-content
   position: relative
   padding: $alert-padding
+  overflow: hidden
   --v-alert-border-color: #{$alert-border-color}
 
   @include tools.position($alert-positions)
@@ -15,22 +16,14 @@
   @include tools.theme($alert-theme...)
   @include tools.variant($alert-variants...)
 
-  &--border
-    border-width: $alert-border-width
-    border-color: var(--v-alert-border-color)
-    border-style: $alert-border-style
+  &.v-alert--border
+    --v-border-opacity: #{$alert-border-opacity}
 
-  &--border-start
-    border-inline-start-width: $alert-border-thin-width
+    &.v-alert--border-start
+      padding-inline-start: $alert-padding + $alert-border-thin-width
 
-  &--border-end
-    border-inline-end-width: $alert-border-thin-width
-
-  &--border-top
-    border-top: $alert-border-thin-width
-
-  &--border-bottom
-    border-bottom: $alert-border-thin-width
+    &.v-alert--border-end
+      padding-inline-end: $alert-padding + $alert-border-thin-width
 
   &--variant-plain
     transition: $alert-plain-transition
@@ -39,6 +32,36 @@
     @include tools.density('v-alert', $alert-density) using ($modifier)
       padding-bottom: $alert-padding + $modifier
       padding-top: $alert-padding + $modifier
+
+      &.v-alert--border-top
+        padding-top: $alert-padding + $alert-border-thin-width + $modifier
+
+      &.v-alert--border-bottom
+        padding-bottom: $alert-padding + $alert-border-thin-width + $modifier
+
+.v-alert__border
+  border-radius: inherit
+  bottom: 0
+  left: 0
+  opacity: var(--v-border-opacity)
+  position: absolute
+  right: 0
+  top: 0
+  width: 100%
+
+  @include tools.border($alert-border...)
+
+  .v-alert--border-start &
+    border-inline-start-width: $alert-border-thin-width
+
+  .v-alert--border-end &
+    border-inline-end-width: $alert-border-thin-width
+
+  .v-alert--border-top &
+    border-top-width: $alert-border-thin-width
+
+  .v-alert--border-bottom &
+    border-bottom-width: $alert-border-thin-width
 
 .v-alert__close
   align-self: flex-start
