fix(VAlert): remove border pointer-events and adjust content line-height

--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -45,6 +45,7 @@
   left: 0
   opacity: var(--v-border-opacity)
   position: absolute
+  pointer-events: none
   right: 0
   top: 0
   width: 100%
@@ -80,6 +81,7 @@
 
 .v-alert__content
   grid-area: content
+  line-height: 1.7
 
 .v-alert__underlay
   .v-alert--border-start &
