feat(VAlert): add support for title

--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -99,3 +99,16 @@
   .v-alert--border-bottom &
     border-bottom-left-radius: 0
     border-bottom-right-radius: 0
+
+.v-alert-title
+  align-items: center
+  display: flex
+  font-size: $alert-title-font-size
+  font-weight: $alert-title-font-weight
+  hyphens: $alert-title-hyphens
+  letter-spacing: $alert-title-letter-spacing
+  line-height: $alert-title-line-height
+  overflow-wrap: $alert-title-overflow-wrap
+  text-transform: $alert-title-text-transform
+  word-break: $alert-title-word-break
+  word-wrap: $alert-title-word-wrap
