--- a/packages/vuetify/src/components/VAlert/_variables.scss
+++ b/packages/vuetify/src/components/VAlert/_variables.scss
@@ -1,4 +1,5 @@
 @use '../../styles/settings';
+@use '../../styles/tools';
 
 // Defaults
 $alert-background: rgb(var(--v-theme-on-surface-variant)) !default;
@@ -16,6 +17,17 @@ $alert-plain-opacity: .62 !default;
 $alert-plain-transition: .2s opacity settings.$standard-easing !default;
 $alert-positions: absolute fixed sticky !default;
 $alert-prepend-margin-inline-end: 16px !default;
+$alert-title-comfortable-line-height: 1.75rem !default;
+$alert-title-compact-line-height: 1.55rem !default;
+$alert-title-font-size: tools.map-deep-get(settings.$typography, 'h6', 'size') !default;
+$alert-title-font-weight: tools.map-deep-get(settings.$typography, 'h6', 'weight') !default;
+$alert-title-hyphens: auto !default;
+$alert-title-letter-spacing: tools.map-deep-get(settings.$typography, 'h6', 'letter-spacing') !default;
+$alert-title-line-height: 1.35 !default;
+$alert-title-overflow-wrap: normal !default;
+$alert-title-text-transform: none !default;
+$alert-title-word-break: normal !default;
+$alert-title-word-wrap: break-word !default;
 
 $alert-border: (
   $alert-border-color,
