fix(VInput/VMessages): add item slot, remove default, update naming

--- a/packages/vuetify/src/components/VMessages/VMessages.sass
+++ b/packages/vuetify/src/components/VMessages/VMessages.sass
@@ -11,7 +11,7 @@
   min-width: 1px // Ensure takes up space with no messages and inside of flex
   position: relative
 
-  &__message
+  &__item
     line-height: $messages-line-height
     word-break: break-word
     overflow-wrap: break-word
