feat(VTextField): remove input transition when using single-line
placeholder text fading in is only preferable when the label
translates to a new position.

--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -42,6 +42,10 @@
   .v-field
     cursor: text
 
+    &--single-line
+      input
+        transition: none
+
   .v-input__details
     padding-inline-start: $text-field-details-padding-inline
     padding-inline-end: $text-field-details-padding-inline
