fix(colors): add text colors to shade backgrounds

--- a/packages/vuetify/src/styles/generic/_colors.scss
+++ b/packages/vuetify/src/styles/generic/_colors.scss
@@ -21,6 +21,10 @@
   @each $color_name, $color_value in colors.$shades {
     .bg-#{$color_name} {
       @include background-color($color_value);
+
+      @if (map.has-key(colors.$text-on-colors, 'shades')) {
+        @include background-text-color('shades', $color_name);
+      }
     }
 
     .text-#{$color_name} {
