fix(VAlert): apply correct border color

--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -9,7 +9,7 @@
   position: relative
   padding: $alert-padding
   overflow: hidden
-  --v-alert-border-color: #{$alert-border-color}
+  --v-border-color: #{$alert-border-color}
 
   @include tools.position($alert-positions)
   @include tools.rounded($alert-border-radius)
