refactor(colors.scss): partial revert of background-text-color
this caused white text to have opacity on dark backgrounds.
need a different way to handle default rgba(0,0,0,.87) text
on light and rgba(255,255,255,1) on dark.

--- a/packages/vuetify/src/styles/generic/_colors.scss
+++ b/packages/vuetify/src/styles/generic/_colors.scss
@@ -14,7 +14,7 @@
 @mixin background-text-color($color_name, $color_type) {
   $map_value: map-deep-get(colors.$text-on-colors, $color_name, $color_type);
 
-  color: rgba($map_value, var(--v-high-emphasis-opacity)) !important;
+  color: $map_value !important;
 }
 
 @if (settings.$color-pack) {
