fix(VAlert): implement flex styles

--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -4,6 +4,7 @@
 
 .v-alert
   display: grid
+  flex: 1 1
   grid-template-areas: "prepend content append close"
   grid-template-columns: max-content auto max-content min-content
   position: relative
