--- a/packages/vuetify/src/components/VApp/VApp.sass
+++ b/packages/vuetify/src/components/VApp/VApp.sass
@@ -1,7 +1,7 @@
 .v-application
   display: flex
   background: rgb(var(--v-theme-background))
-  color: rgb(var(--v-theme-on-background))
+  color: rgba(var(--v-theme-on-background), var(--v-high-emphasis-opacity))
 
   a
     cursor: pointer
