fix(colors): remove !important declaration on background-text color
the default color for background colors should be a suggestion
and not compete with text-color helper classes

--- a/packages/vuetify/src/styles/generic/_colors.scss
+++ b/packages/vuetify/src/styles/generic/_colors.scss
@@ -14,7 +14,7 @@
 @mixin background-text-color($color_name, $color_type) {
   $map_value: map-deep-get(colors.$text-on-colors, $color_name, $color_type);
 
-  color: $map_value !important;
+  color: $map_value;
 }
 
 @if (settings.$color-pack) {
